Add new action/job for running golangci-lint in CI. - Force a lint error on new code - Disable quality check in CI for now

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   quality:
     name: quality
+    if: ${{ false }}  # disable while testing CI
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
