--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -20,3 +20,4 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.49.0
+          args: --issues-exit-code=0
