--- a/.golangci.optional.yml
+++ b/.golangci.optional.yml
@@ -5,6 +5,17 @@ run:
 
   timeout: 2m
   skip-dirs-use-default: true
+
+linters-settings:
+  goimports:
+    local-prefixes: github.com/byatesrae/
+  gocritic:
+    enabled-tags:
+      - diagnostic
+      - experimental
+      - opinionated
+      - performance
+      - style
       
 linters:
   enable-all: true
@@ -14,3 +25,4 @@ linters:
 
 issues:
   new: true
+  new-from-rev: origin/master
