--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,4 +1,4 @@
-name: golangci-lint
+name: golangci-lint-optional
 on:
   pull_request:
     types: [ opened, synchronize, reopened, closed, edited ]
@@ -8,7 +8,7 @@ permissions:
   contents: read
   pull-requests: read
 jobs:
-  golangci:
+  lint:
     name: lint
     runs-on: ubuntu-latest
     steps:
@@ -20,4 +20,5 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.49.0
-          args: --issues-exit-code=0
+          args: -c ./.golangci.optional.yml
+          only-new-issues: true
