--- a/.github/workflows/golangci-lint-optional.yml
+++ b/.github/workflows/golangci-lint-optional.yml
@@ -20,5 +20,5 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.49.0
-          args: -c ./.golangci.optional.yml
+          args: -c ./.golangci.optional.yml --issues-exit-code=0
           only-new-issues: true
