--- a/.golangci.optional.yml
+++ b/.golangci.optional.yml
@@ -1,3 +1,5 @@
+# This config contains a much more verbose assessment of the code than that defined
+# in .golangci.yml and is not suitable as a quality gate in CI.
 run:
   modules-download-mode: vendor
   issues-exit-code: 1
