Fixes based on a bunch of optional linter issues

--- a/.golangci.optional.yml
+++ b/.golangci.optional.yml
@@ -18,8 +18,14 @@ linters-settings:
       - opinionated
       - performance
       - style
+  tagliatelle:
+    case:
+      rules:
+        json: snake
       
 linters:
   enable-all: true
   disable:
     - testpackage
+    - gci
+    - goerr113
