--- a/.env.local.example
+++ b/.env.local.example
@@ -14,7 +14,6 @@ BUILD_IMAGE=arm64v8/golang
 # generate a short-lived installation token for private repo read access.
 GITHUB_TOKEN=FILL_IN_MANUALLY
 
-# Config for the application. 
-# See ./cmd/weatherapi/config.go
+# App configuration. Run app with flag "-help" to see descriptions.
 OPENWEATHER_API_KEY=FILL_IN_MANUALLY
-WEATHERTSTACK_ACCESS_KEY=FILL_IN_MANUALLY
+WEATHERSTACK_ACCESS_KEY=FILL_IN_MANUALLY
