--- a/.env.local.example
+++ b/.env.local.example
@@ -14,6 +14,9 @@ BUILD_IMAGE=arm64v8/golang
 # generate a short-lived installation token for private repo read access.
 GITHUB_TOKEN=FILL_IN_MANUALLY
 
+# The port used when hosting documentation.
+DOC_PORT=6060
+
 # App configuration. Run app with flag "-help" to see descriptions.
 OPENWEATHER_API_KEY=FILL_IN_MANUALLY
 WEATHERSTACK_ACCESS_KEY=FILL_IN_MANUALLY
