--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,9 @@
 # Default configuration for usage in your local development environment.
 # Some sensible defaults are not available, see `FILL_IN_MANUALLY` values.
 
-# The Golang image (without tag) used for this project.
-# See https://github.com/docker-library/official-images#architectures-other-than-amd64.
-BUILD_IMAGE=arm64v8/golang
+# The Docker image used for Go local development.
+# See https://github.com/byatesrae/docker.go_build.
+BUILD_IMAGE=coverto/go_build:v1.1.0
 
 # For containerised Git access to private repo's. See https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token.
 # GitHub's PAT's are currently very permissive (which is fine for local development). 
