--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -1,12 +1,15 @@
-name: lint-pr
+name: Lint Pull Request
+
 on:
   pull_request:
     types: [ opened, synchronize, reopened, closed, edited ]
     branches:
       - master
+
 permissions:
   contents: read
   pull-requests: read
+  
 jobs:
   lint:
     name: Lint
