--- a/.env.local.example
+++ b/.env.local.example
@@ -3,7 +3,7 @@
 
 # The Docker image used for Go local development.
 # See https://github.com/byatesrae/docker.go_build.
-BUILD_IMAGE=coverto/go_build:v1.1.0
+BUILD_IMAGE=coverto/go_build:v1.2.0
 
 # For containerised Git access to private repo's. See https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token.
 # GitHub's PAT's are currently very permissive (which is fine for local development). 
@@ -13,6 +13,9 @@ BUILD_IMAGE=coverto/go_build:v1.1.0
 # Then something like https://github.com/tibdex/github-app-token can be used to 
 # generate a short-lived installation token for private repo read access.
 GITHUB_TOKEN=FILL_IN_MANUALLY
+
+# The port used when hosting documentation.
+DOCS_PORT=6060
 
 # App configuration. Run app with flag "-help" to see descriptions.
 OPENWEATHER_API_KEY=FILL_IN_MANUALLY
