--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -18,7 +18,10 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.19
+          submodules: recursive
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
