--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      submodules: recursive
+      with:
+        submodules: recursive
     - name: Create .env
       run: |
         cat > .env << EOF
