--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -25,5 +25,5 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.49.0
-          args: -c ./.golangci.optional.yml --issues-exit-code=0
+          args: -c ./build/.golangci.optional.yml --issues-exit-code=0
           only-new-issues: true
