--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,42 +7,7 @@ on:
       - master
   push:
     branches: [ master ]
-
+  
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: recursive
-    - name: Create .env
-      run: |
-        cat > .env << EOF
-        BUILD_IMAGE=coverto/go_build:v1.2.0
-        GITHUB_TOKEN=TODO_NOT_YET_USED
-        EOF
-    - name: Lint
-      run: make lint-dockerized
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: recursive
-    - name: Create .env
-      run: |
-        cat > .env << EOF
-        BUILD_IMAGE=coverto/go_build:v1.2.0
-        GITHUB_TOKEN=TODO_NOT_YET_USED
-        EOF
-    - name: Test
-      run: make test-dockerized
-    - name: Generate test coverage
-      run: make generate-test-coverage-dockerized
-    - name: Upload test coverage
-      uses: actions/upload-artifact@v2
-      with:
-        name: coverage-report
-        path: 'coverage.html'
+  ci-workflow:
+    uses: byatesrae/go_build/.github/workflows/ci.yml@master
