--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -5,6 +5,10 @@ on:
     types: [ opened, synchronize, reopened, closed, edited ]
     branches:
       - master
+
+permissions:
+  contents: read
+  pull-requests: read
   
 jobs:
   lint-pr-workflow:
