--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,4 +10,4 @@ on:
   
 jobs:
   ci-workflow:
-    uses: byatesrae/go_build/.github/workflows/ci.yml@master
+    uses: byatesrae/go_build/.github/workflows/ci.yml@refactor/fix-pipelines-not-creating-env
