--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -12,4 +12,4 @@ permissions:
   
 jobs:
   lint-pr-workflow:
-    uses: byatesrae/go_build/.github/workflows/lint-pr.yml@refactor/fix-pipelines-not-creating-env
+    uses: byatesrae/go_build/.github/workflows/lint-pr.yml@master
